# candorcv

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  compose.yaml  design.md  intent.md  memory.md  plan.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py
app/: __init__.py  ai.py  analysis.py  config.py  errors.py  extractors.py  jobs.py  language.py  optimization.py  repository.py  server.py  stateless.py
docs/: architecture.md  brand.md  implementation-status.md  operations.md  privacy.md  threat-model.md
docs/decisions/: 0001-mvp-architecture.md  0002-ai-provider.md
evals/: cases.json
scripts/: quality.ps1
static/: app.js  index.html  styles.css
tests/: helpers.py  test_analysis.py  test_config.py  test_extractors.py  test_jobs.py  test_optimization.py  test_repository.py  test_server_flow.py  test_stateless.py
