[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candorcv"
version = "0.1.0"
description = "Privacy-first ATS CV analysis and optimization application"
requires-python = ">=3.11"
dependencies = ["pypdf>=6.0,<7"]

[project.scripts]
candorcv = "app.server:main"

[tool.setuptools.packages.find]
include = ["app*"]
